versioned_docs/version-2.1/sql-manual/sql-statements/job/RESUME-JOB.md
---
{
"title": "RESUME JOB",
"language": "en"
}
---

<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->



### Name

RESUME JOB

### Description

Used to restart a JOB in PAUSE state. The restarted job will continue to be executed periodically. A JOB in STOP state cannot be resumed.

```sql
RESUME JOB WHERE jobName = 'job_name';
```

### Example

1. Restart the JOB named test1.

   ```sql
   RESUME JOB WHERE jobName = 'test1';
   ```

### Keywords

        RESUME, JOB

### Best Practice



